skins/default/form.css
/* components */
/* features colors and action left button part */
/* modules */
input:not([type=button]):not([type=checkbox]):not([type=hidden]):not([type=file]):not([type=submit]):not(.customized),
select,
textarea {
  background-color: white;
  border: 1px solid #a3a3a3;
  border-radius: 2px;
  font-size: 12px;
  height: 18px;
  line-height: 14px;
  margin: 2px 0; }
  input:not([type=button]):not([type=checkbox]):not([type=hidden]):not([type=file]):not([type=submit]):not(.customized):not(select),
  select:not(select),
  textarea:not(select) {
    padding: 1px 2px; }
  input:not([type=button]):not([type=checkbox]):not([type=hidden]):not([type=file]):not([type=submit]):not(.customized)[readonly],
  select[readonly],
  textarea[readonly] {
    background: none;
    border: none;
    overflow: visible !important;
    resize: none; }

/* datetime input */
div.date_time,
td.date_time {
  position: relative; }
  div.date_time .ui-datepicker-trigger,
  td.date_time .ui-datepicker-trigger {
    background: url("img/input_datetime.png") center no-repeat;
    border: none;
    color: transparent;
    cursor: pointer;
    font-size: 1px;
    height: 21px;
    margin-left: -22px !important;
    position: absolute;
    top: 2px;
    width: 22px; }

td.date_time .ui-datepicker-trigger {
  height: 20px;
  top: 0; }

/* combo list TODO confirm */
.ui-state-active {
  background: #cef37f !important; }

.ui-autocomplete {
  max-height: 230px;
  overflow-y: scroll; }

/* float / integer input / display */
.float > input,
.integer > input {
  text-align: right; }

/* combo input */
div.class,
td.class {
  position: relative; }
  div.class > input.combo ~ .ui-helper-hidden-accessible,
  td.class > input.combo ~ .ui-helper-hidden-accessible {
    display: none; }
  div.class > input.combo ~ a, div.class > input.combo ~ button,
  td.class > input.combo ~ a,
  td.class > input.combo ~ button {
    color: transparent;
    height: 24px;
    font-size: 1px;
    width: 22px; }
    div.class > input.combo ~ a.more, div.class > input.combo ~ button.more,
    td.class > input.combo ~ a.more,
    td.class > input.combo ~ button.more {
      background: url("img/input_combo.png") center no-repeat;
      border: none;
      cursor: pointer;
      height: 22px;
      margin-left: -14px !important;
      position: absolute;
      top: 2px;
      width: 14px; }

td.class > input.combo ~ a.more, td.class > input.combo ~ button.more {
  height: 20px;
  top: 0; }

/* fieldset */
fieldset {
  /* block fieldset */ }
  fieldset > div.hidden {
    display: none; }
  fieldset > div:not(.hidden):not(.tabber):not([class*=before-]) {
    display: table-row;
    /* standard field */
    /* columns */
    /* multiple field */ }
    fieldset > div:not(.hidden):not(.tabber):not([class*=before-]) > div,
    fieldset > div:not(.hidden):not(.tabber):not([class*=before-]) > label {
      display: table-cell;
      white-space: pre-line; }
      fieldset > div:not(.hidden):not(.tabber):not([class*=before-]) > div > :not(pre):not(textarea),
      fieldset > div:not(.hidden):not(.tabber):not([class*=before-]) > label > :not(pre):not(textarea) {
        white-space: initial; }
    fieldset > div:not(.hidden):not(.tabber):not([class*=before-]):not(.multiple):hover {
      background-color: #defdaf; }
    fieldset > div:not(.hidden):not(.tabber):not([class*=before-]):not(.multiple) > label {
      font-weight: bold;
      height: 24px;
      vertical-align: middle;
      white-space: nowrap; }
      fieldset > div:not(.hidden):not(.tabber):not([class*=before-]):not(.multiple) > label:after {
        content: " :";
        margin-right: .5em; }
    fieldset > div:not(.hidden):not(.tabber):not([class*=before-]):not(.multiple) > div {
      height: 24px;
      vertical-align: middle; }
    fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).columns {
      display: block;
      width: 100%; }
      fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).columns > .column {
        vertical-align: top; }
        fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).columns > .column:not(:first-child) {
          margin-left: 4px; }
        fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).columns > .column:not(:last-child) {
          float: left; }
        fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).columns > .column:last-child {
          float: right; }
          fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).columns > .column:last-child fieldset {
            display: inline-block; }
    fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple {
      border: lightgrey 1px solid;
      caption-side: bottom;
      display: block; }
      fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple > * {
        display: block;
        padding: 3px; }
      fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple > label {
        background-color: #e9ede7;
        height: 14px;
        font-weight: bold;
        white-space: nowrap; }
      fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.collection > thead > tr > th, fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.map > thead > tr > th {
        padding: 1px 2px;
        white-space: nowrap; }
      fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.collection > tbody > tr:hover, fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.map > tbody > tr:hover {
        background-color: #defdaf; }
      fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.collection > tbody > tr > td, fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.map > tbody > tr > td {
        padding: 1px 5px 0 0;
        white-space: nowrap; }
        fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.collection > tbody > tr > td input.dtp--date, fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.map > tbody > tr > td input.dtp--date {
          margin-top: -2px; }
        fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.collection > tbody > tr > td > input:not([type=file]),
        fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.collection > tbody > tr > td > textarea, fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.map > tbody > tr > td > input:not([type=file]),
        fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.map > tbody > tr > td > textarea {
          height: 18px;
          margin-top: -2px;
          vertical-align: top;
          width: 100%; }
        fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.collection > tbody > tr > td > select, fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.map > tbody > tr > td > select {
          height: 22px;
          margin: -2px -6px -2px 0;
          vertical-align: top; }
        fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.collection > tbody > tr > td > textarea, fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.map > tbody > tr > td > textarea {
          height: 15px;
          padding-top: 4px; }
        fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.collection > tbody > tr > td.minus, fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.map > tbody > tr > td.minus {
          background: url("img/remove_row.png") right 3px no-repeat;
          color: transparent;
          cursor: pointer;
          max-width: 16px;
          min-width: 16px;
          width: 16px; }
        fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.collection > tbody > tr > td.multiple > ul, fieldset > div:not(.hidden):not(.tabber):not([class*=before-]).multiple table.map > tbody > tr > td.multiple > ul {
          margin-left: .5em;
          padding-left: 1em; }
  fieldset.block {
    border: 1px solid #a3a3a3;
    border-radius: 4px;
    padding: 0 .25em; }
    fieldset.block > legend {
      color: #202020;
      font-size: 14px;
      margin-left: .25em;
      padding: 0 .25em;
      white-space: nowrap; }

/* main tabber */
form > fieldset:not(:last-child) > .tabber {
  border-bottom: 1px solid #575757;
  padding-bottom: 2px; }

